k8-setup/producer-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-consumer
  labels:
    app: producer-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-consumer
  template:
    metadata:
      labels:
        app: producer-consumer
    spec:
      containers:
      - name: producer-consumer
        image: frozenwolf2003/producer_consumer:latest
        volumeMounts:
        - name: shared-storage
          mountPath: /opt/airflow/custom_persistent_shared
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-pvc
