k8-setup/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-ml
  namespace: platform
  labels:
    app: fastapi-ml
spec:
  selector:
    app: fastapi-ml
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: fastapi-port
  type: ClusterIP
